File generated by Skaffolder - user: quentin.bes@gmail.com
