# api/resource/Cavaleo_db/Horse.php
@@ -63,6 +63,93 @@
 //CRUD METHODS
 
 
+//CRUD - CREATE
+
+
+$app->post('/horse',	function () use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'birthdate'	=> $body->birthdate,
+		'name'	=> $body->name,
+		
+		'owner' => isset($body->owner)?$body->owner:'',
+	);
+
+	$obj = makeQuery("INSERT INTO horse (_id, birthdate, name , owner )  VALUES ( null, :birthdate, :name , :owner   )", $params, false);
+    
+	
+	echo json_encode($body);
+	
+});
+	
+//CRUD - REMOVE
+
+$app->delete('/horse/:id',	function ($id) use ($app){
+	
+	$params = array (
+		'id'	=> $id,
+	);
+
+	makeQuery("DELETE FROM horse WHERE _id = :id LIMIT 1", $params);
+
+});
+
+//CRUD - FIND BY owner
+
+$app->get('/horse/findByowner/:key',	function ($key) use ($app){	
+
+	$params = array (
+		'key'	=> $key,
+	);
+	makeQuery("SELECT * FROM horse WHERE owner = :key", $params);
+	
+});
+	
+//CRUD - GET ONE
+	
+$app->get('/horse/:id',	function ($id) use ($app){
+	$params = array (
+		'id'	=> $id,
+	);
+	
+	$obj = makeQuery("SELECT * FROM horse WHERE _id = :id LIMIT 1", $params, false);
+	
+	
+	
+	echo json_encode($obj);
+	
+});
+	
+	
+//CRUD - GET LIST
+
+$app->get('/horse',	function () use ($app){
+	makeQuery("SELECT * FROM horse");
+});
+
+
+//CRUD - EDIT
+
+$app->post('/horse/:id',	function ($id) use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'id'	=> $id,
+		'birthdate'	    => $body->birthdate,
+		'name'	    => $body->name,
+		'owner'      => isset($body->owner)?$body->owner:'' 
+	);
+
+	$obj = makeQuery("UPDATE horse SET  birthdate = :birthdate,  name = :name  , owner=:owner  WHERE _id = :id LIMIT 1", $params, false);
+    
+	
+	echo json_encode($body);
+    	
+});
+
 
 /*
  * CUSTOM SERVICES
